--- a/DS-GPA&Survival_Curve.ipynb
+++ b/DS-GPA&Survival_Curve.ipynb
@@ -33,7 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_excel('BrainMets_List_July2020_LF_OS.xlsx')\n",
+    "df = pd.read_excel('~/Desktop/USF_courses/Practicum/data/BrainMets_List_July2020_LF_OS.xlsx')\n",
     "\n",
     "#### Get patient number\n",
     "def get_patient(col):\n",
@@ -117,8 +117,16 @@
     {
      "data": {
       "text/plain": [
-       "array(['Lung', 'Melanoma', 'Other', 'Breast', 'GYN', 'Kidney', 'GI',\n",
-       "       'Unknown', 'Sarcoma', nan], dtype=object)"
+       "Lung        3716\n",
+       "Breast      3030\n",
+       "Melanoma    2194\n",
+       "Kidney       521\n",
+       "GI           306\n",
+       "Other        241\n",
+       "GYN          194\n",
+       "Sarcoma      125\n",
+       "Unknown      102\n",
+       "Name: Primary tumor Site, dtype: int64"
       ]
      },
      "execution_count": 6,
@@ -127,7 +135,7 @@
     }
    ],
    "source": [
-    "df['Primary tumor Site'].unique()"
+    "df['Primary tumor Site'].value_counts()"
    ]
   },
   {
@@ -139,14 +147,28 @@
     {
      "data": {
       "text/plain": [
-       "array(['Met_Small_Cell_CA', 'Met_Melanoma', 'Met_Carcinoma_NOS',\n",
-       "       'Met_AdenoCA', 'Met_Other', 'Met_Small_cell_CA',\n",
-       "       'Met_Renal_cell_CA', 'Met_Squamous_Cell_CA', 'Met_Renal_Cell_CA',\n",
-       "       'Met_Large_Cell_CA', 'Met_Lymphoma', 'Met_Sarcoma',\n",
-       "       'Met_Squamous call carcinoma', 'Met_Germ_Cell_Tumor', nan,\n",
-       "       'Met_Large_cell_CA', 'Met_Bronchoalveolar_CA',\n",
-       "       'Met_Squamous_cell_CA', 'Met_Adenosquamous_CA',\n",
-       "       'Met_Germ_cell_tumor', 'Bone_met', 'Met_'], dtype=object)"
+       "Met_AdenoCA                    6285\n",
+       "Met_Melanoma                   2197\n",
+       "Met_Renal_cell_CA               421\n",
+       "Met_Carcinoma_NOS               396\n",
+       "Met_Other                       185\n",
+       "Met_Small_cell_CA               178\n",
+       "Met_Squamous_cell_CA            168\n",
+       "Met_Small_Cell_CA               119\n",
+       "Met_Sarcoma                     117\n",
+       "Met_Renal_Cell_CA                90\n",
+       "Met_Large_cell_CA                80\n",
+       "Met_Squamous_Cell_CA             63\n",
+       "Met_Adenosquamous_CA             50\n",
+       "Met_Bronchoalveolar_CA           30\n",
+       "Met_Large_Cell_CA                20\n",
+       "Met_Germ_cell_tumor              12\n",
+       "Bone_met                         10\n",
+       "Met_Germ_Cell_Tumor               3\n",
+       "Met_                              2\n",
+       "Met_Squamous call carcinoma       2\n",
+       "Met_Lymphoma                      1\n",
+       "Name: Primary tumor Histology, dtype: int64"
       ]
      },
      "execution_count": 7,
@@ -155,7 +177,7 @@
     }
    ],
    "source": [
-    "df['Primary tumor Histology'].unique()"
+    "df['Primary tumor Histology'].value_counts()"
    ]
   },
   {
@@ -188,7 +210,11 @@
     {
      "data": {
       "text/plain": [
-       "array(['False', 'True', 'Unkn', 0], dtype=object)"
+       "True     7588\n",
+       "False    1975\n",
+       "0         810\n",
+       "Unkn       72\n",
+       "Name: ECM, dtype: int64"
       ]
      },
      "execution_count": 9,
@@ -197,7 +223,7 @@
     }
    ],
    "source": [
-    "df['ECM'].unique()"
+    "df['ECM'].value_counts()"
    ]
   },
   {
@@ -226,40 +252,6 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "6e62f253-2294-43ef-86d8-01808ca42b5c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['PiCare MetID', 'Failure-binary', 'Failure-eventFreeTime',\n",
-       "       'Follow-up time', 'Time to death', 'Date GK', 'Age', 'Sex',\n",
-       "       'Primary tumor Site', 'Primary tumor Histology', 'ECM', 'Location',\n",
-       "       'Brief location', 'Side', 'Lateral dimension', 'AP dimension',\n",
-       "       'Vertical dimension', '#Metastases at 1st GK',\n",
-       "       'Time between prim and met diagnosis', 'Prior SRS to same lesion',\n",
-       "       'Prior SRS to other lesion', 'KPS at 1st GK', 'Prescribed IDL',\n",
-       "       'Target vol in IDL', 'IDL volume', 'Vol in 12 Gy line',\n",
-       "       'Vol in 10 Gy line', 'Prior_EBRT', 'Prior_RS', 'Prior_Chemo',\n",
-       "       'Conc_Chemo', 'Salvage_RS', 'Salv_surg', 'Headaches', 'Seizures',\n",
-       "       'Neuro symptoms', 'Prescription Dose', 'Max Dose', 'Target volume',\n",
-       "       'Target vol in IDL.1', 'Maximum Tumor Diameter', 'patient',\n",
-       "       'response_v'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
    "id": "849a0c04-e04e-49d2-ab72-20e065b06764",
    "metadata": {},
    "outputs": [
@@ -269,7 +261,7 @@
        "array(['False', 'True', 'Unkn'], dtype=object)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "f96b2f1e-df7b-4fd4-bb5d-00b6ad219dfe",
    "metadata": {},
    "outputs": [],
@@ -397,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "391b0147-d87e-4abf-810a-f384d271986f",
    "metadata": {},
    "outputs": [],
@@ -408,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "59b288dc-fe56-401c-8ba4-590ff2053eb8",
    "metadata": {},
    "outputs": [],
@@ -419,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "817f3672-afc6-4891-a651-a87a709573ab",
    "metadata": {},
    "outputs": [],
@@ -430,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "58ca1643-b5a3-4df9-932c-9fe96f720f19",
    "metadata": {},
    "outputs": [
@@ -440,7 +432,7 @@
        "(1381, 12)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "14d82fd6-795b-4cc1-a681-51dc871c83a4",
    "metadata": {},
    "outputs": [],
@@ -473,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "eced2865-748f-4e0d-b40f-840982b5441d",
    "metadata": {},
    "outputs": [
@@ -485,7 +477,7 @@
        "Name: alive, dtype: int64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -497,27 +489,6 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "c0c78004-b836-4ae3-8022-1d096955accc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['1.5-2', '2.5-3', '0-1', '3.5-4'], dtype='object')"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_curve['GPA_range'].value_counts().index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
    "id": "e85922c3-fc2c-4e62-ad51-f09a411d82c7",
    "metadata": {},
    "outputs": [],
@@ -527,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "e2e768ce-497d-41a6-8db1-d71ac935b02c",
    "metadata": {},
    "outputs": [
@@ -537,7 +508,7 @@
        "<lifelines.KaplanMeierFitter:\"Overall\", fitted with 1381 total observations, 114 right-censored observations>"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -552,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "3cc2c14d-a061-4884-af5b-1e8255627d39",
    "metadata": {},
    "outputs": [
@@ -576,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "dd80d0be-981d-4667-903b-05a7e50c26a2",
    "metadata": {},
    "outputs": [],
@@ -605,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "853745d2-9781-4945-b201-62c7098a9a4c",
    "metadata": {},
    "outputs": [
@@ -628,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "682b4a8e-69fd-4d7d-b6c8-40965efd4013",
    "metadata": {},
    "outputs": [
@@ -702,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "56324c39-193b-4df8-945d-4df7d02d3a3e",
    "metadata": {},
    "outputs": [],
@@ -712,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "06cc5189-940f-428b-8367-ee920873d6ec",
    "metadata": {},
    "outputs": [
@@ -960,7 +931,7 @@
        "22       Kidney     2.5-3      525.0           239.0            977.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -974,18 +945,10 @@
    "id": "58fa081e-5c5b-4cfd-a634-ef092b9fda69",
    "metadata": {},
    "source": [
-    "#### DOCUMEN\n",
+    "#### Documents\n",
     "* https://lifelines.readthedocs.io/en/latest/fitters/univariate/KaplanMeierFitter.html\n",
     "* https://github.com/CamDavidsonPilon/lifelines/blob/master/docs/Survival%20analysis%20with%20lifelines.rst"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea065aeb-ecad-4ba0-80b7-cbe57c0f7329",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
