add result_month table in the end

--- a/DS-GPA&Survival_Curve.ipynb
+++ b/DS-GPA&Survival_Curve.ipynb
@@ -456,6 +456,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### Data preparation\n",
     "df_patients_keepfirst['alive'] = df_patients_keepfirst['Time to death'].apply(lambda x: 0 if pd.isnull(x) == True else 1)\n",
     "\n",
     "df_curve = df_patients_keepfirst[['alive','response_v','GPA_range','Primary tumor Site']].dropna()\n",
@@ -552,6 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#### Generate Curve, KMF Median & CI\n",
     "def survival_curve_kmf(data,cluster_list,site_name, classes = \"GPA_range\", survival_col = \"alive\",time_col = \"response_v\"):\n",
     "    ax = plt.subplot(111)\n",
     "    ci_lst = [] #(site_name, gpa_range, median, lower_ci, higher_ci)\n",
@@ -938,6 +940,297 @@
    ],
    "source": [
     "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a98e47dd-3ef1-486d-bf6c-8e66eade5ee1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def in_month(col):\n",
+    "    return np.round(col/30,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "7da1a390-ae3f-47a6-b1d4-f510d2396d41",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_month = result.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "84d7f705-e4bb-4bdf-9ce0-013a337817ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for col in ['KMF_median','Lower_median_CI','Higher_median_CI']:\n",
+    "    result_month[col]=result_month[col].apply(lambda x: in_month(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "49c582c8-c3e6-4f9b-a1bf-3ab67e9ba15d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Primary_site</th>\n",
+       "      <th>GPA_range</th>\n",
+       "      <th>KMF_median</th>\n",
+       "      <th>Lower_median_CI</th>\n",
+       "      <th>Higher_median_CI</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Overall</td>\n",
+       "      <td>0-1</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>6.43</td>\n",
+       "      <td>9.17</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Overall</td>\n",
+       "      <td>1.5-2</td>\n",
+       "      <td>9.37</td>\n",
+       "      <td>8.50</td>\n",
+       "      <td>10.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Overall</td>\n",
+       "      <td>2.5-3</td>\n",
+       "      <td>12.50</td>\n",
+       "      <td>10.83</td>\n",
+       "      <td>14.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Overall</td>\n",
+       "      <td>3.5-4</td>\n",
+       "      <td>17.67</td>\n",
+       "      <td>13.33</td>\n",
+       "      <td>28.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Breast</td>\n",
+       "      <td>0-1</td>\n",
+       "      <td>9.80</td>\n",
+       "      <td>6.20</td>\n",
+       "      <td>12.43</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Breast</td>\n",
+       "      <td>1.5-2</td>\n",
+       "      <td>12.20</td>\n",
+       "      <td>10.37</td>\n",
+       "      <td>14.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Breast</td>\n",
+       "      <td>2.5-3</td>\n",
+       "      <td>15.37</td>\n",
+       "      <td>11.87</td>\n",
+       "      <td>23.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Breast</td>\n",
+       "      <td>3.5-4</td>\n",
+       "      <td>30.20</td>\n",
+       "      <td>11.73</td>\n",
+       "      <td>77.33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Melanoma</td>\n",
+       "      <td>0-1</td>\n",
+       "      <td>4.23</td>\n",
+       "      <td>2.57</td>\n",
+       "      <td>9.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Melanoma</td>\n",
+       "      <td>1.5-2</td>\n",
+       "      <td>4.77</td>\n",
+       "      <td>3.97</td>\n",
+       "      <td>6.47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Melanoma</td>\n",
+       "      <td>2.5-3</td>\n",
+       "      <td>8.97</td>\n",
+       "      <td>7.67</td>\n",
+       "      <td>10.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Melanoma</td>\n",
+       "      <td>3.5-4</td>\n",
+       "      <td>13.33</td>\n",
+       "      <td>7.23</td>\n",
+       "      <td>16.13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>GI</td>\n",
+       "      <td>0-1</td>\n",
+       "      <td>5.50</td>\n",
+       "      <td>2.17</td>\n",
+       "      <td>13.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>GI</td>\n",
+       "      <td>1.5-2</td>\n",
+       "      <td>11.00</td>\n",
+       "      <td>5.33</td>\n",
+       "      <td>14.83</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>GI</td>\n",
+       "      <td>2.5-3</td>\n",
+       "      <td>8.00</td>\n",
+       "      <td>5.37</td>\n",
+       "      <td>11.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>GI</td>\n",
+       "      <td>3.5-4</td>\n",
+       "      <td>11.87</td>\n",
+       "      <td>11.87</td>\n",
+       "      <td>11.87</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Lung</td>\n",
+       "      <td>0-1</td>\n",
+       "      <td>8.13</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>9.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Lung</td>\n",
+       "      <td>1.5-2</td>\n",
+       "      <td>9.70</td>\n",
+       "      <td>8.73</td>\n",
+       "      <td>11.73</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Lung</td>\n",
+       "      <td>2.5-3</td>\n",
+       "      <td>15.43</td>\n",
+       "      <td>12.57</td>\n",
+       "      <td>17.97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Lung</td>\n",
+       "      <td>3.5-4</td>\n",
+       "      <td>22.77</td>\n",
+       "      <td>9.83</td>\n",
+       "      <td>33.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Kidney</td>\n",
+       "      <td>0-1</td>\n",
+       "      <td>5.80</td>\n",
+       "      <td>4.13</td>\n",
+       "      <td>9.37</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Kidney</td>\n",
+       "      <td>1.5-2</td>\n",
+       "      <td>13.77</td>\n",
+       "      <td>6.60</td>\n",
+       "      <td>16.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Kidney</td>\n",
+       "      <td>2.5-3</td>\n",
+       "      <td>17.50</td>\n",
+       "      <td>7.97</td>\n",
+       "      <td>32.57</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Primary_site GPA_range KMF_median Lower_median_CI Higher_median_CI\n",
+       "0       Overall       0-1       8.00            6.43             9.17\n",
+       "1       Overall     1.5-2       9.37            8.50            10.40\n",
+       "2       Overall     2.5-3      12.50           10.83            14.33\n",
+       "3       Overall     3.5-4      17.67           13.33            28.37\n",
+       "4        Breast       0-1       9.80            6.20            12.43\n",
+       "5        Breast     1.5-2      12.20           10.37            14.27\n",
+       "6        Breast     2.5-3      15.37           11.87            23.73\n",
+       "7        Breast     3.5-4      30.20           11.73            77.33\n",
+       "8      Melanoma       0-1       4.23            2.57             9.37\n",
+       "9      Melanoma     1.5-2       4.77            3.97             6.47\n",
+       "10     Melanoma     2.5-3       8.97            7.67            10.20\n",
+       "11     Melanoma     3.5-4      13.33            7.23            16.13\n",
+       "12           GI       0-1       5.50            2.17            13.90\n",
+       "13           GI     1.5-2      11.00            5.33            14.83\n",
+       "14           GI     2.5-3       8.00            5.37            11.20\n",
+       "15           GI     3.5-4      11.87           11.87            11.87\n",
+       "16         Lung       0-1       8.13            6.50             9.73\n",
+       "17         Lung     1.5-2       9.70            8.73            11.73\n",
+       "18         Lung     2.5-3      15.43           12.57            17.97\n",
+       "19         Lung     3.5-4      22.77            9.83            33.10\n",
+       "20       Kidney       0-1       5.80            4.13             9.37\n",
+       "21       Kidney     1.5-2      13.77            6.60            16.50\n",
+       "22       Kidney     2.5-3      17.50            7.97            32.57"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result_month"
    ]
   },
   {
