--- a/brain_met_initial_analysis_anish.ipynb
+++ b/brain_met_initial_analysis_anish.ipynb
@@ -15560,6 +15560,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "4c84fd5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'best_model_lung' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ae8abbb6deb5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mbest_model_lung\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'best_model_lung' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "best_model_lung"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "adbc40c9",
    "metadata": {},
@@ -29030,11 +29052,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "e9c9f3e0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.stats import median_test"
+   ]
   },
   {
    "cell_type": "code",
