update gradient boosting

--- a/Gradient_Boosting.ipynb
+++ b/Gradient_Boosting.ipynb
@@ -441,7 +441,7 @@
       "--- Encoding column  Neuro symptoms\n",
       "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
       "### \n",
-      "###Test score is 0.05338305505482677\n",
+      "###Test score is 0.06085159280103247\n",
       "\n",
       " \n",
       "\n",
@@ -456,7 +456,7 @@
       "--- Encoding column  Prior_Chemo\n",
       "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
       "### \n",
-      "###Test score is -0.02574303388772403\n",
+      "###Test score is -0.03239041408663512\n",
       "\n",
       " \n",
       "\n",
@@ -482,7 +482,7 @@
       "--- Encoding column  Prior_Chemo\n",
       "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
       "### \n",
-      "###Test score is 0.04091295454895982\n",
+      "###Test score is 0.002697061354297592\n",
       "\n",
       " \n",
       "\n",
@@ -498,7 +498,7 @@
       "--- Encoding column  Neuro symptoms\n",
       "Fitting 5 folds for each of 10 candidates, totalling 50 fits\n",
       "### \n",
-      "###Test score is -0.2447186018858909\n",
+      "###Test score is -0.1053892828244336\n",
       "\n",
       " \n",
       "\n",
@@ -530,7 +530,7 @@
     }
    ],
    "source": [
-    "info = []\n",
+    "# info = []\n",
     "for site, data in dfs:\n",
     "    print(site)\n",
     "    X,y = process(data)\n",
@@ -539,7 +539,7 @@
     "    output = Random_search_gbr_cv(X,y)\n",
     "    print(f'### \\n###Test score is {output[-1]}')\n",
     "    print('\\n \\n')\n",
-    "    info.append((site,output,X,y))"
+    "    # info.append((site,output,X,y))"
    ]
   },
   {
